# voraus

./: .gitignore  CMakeLists.txt  README.md  annotated.html  central__mod__man_8cpp.html  central__mod__man_8cpp_source.html  central__module__management_8cpp.html  central__module__management_8cpp_source.html  central__module__management_8hpp.html  central__module__management_8hpp_source.html  central__plug__in_8cpp.html  central__plug__in_8cpp_source.html  central__plug__in_8hpp.html  central__plug__in_8hpp_source.html  central__plug__in__controller_8cpp.html  central__plug__in__controller_8cpp_source.html  classes.html  classmodule__management_1_1ModManBase.html  classmodule__management_1_1ModManCentral.html  classmodule__management_1_1ModManDecentral.html  classvoraus_1_1DistributedPlugIn.html  classvoraus_1_1PlugInBase.html  classvoraus_1_1PlugInCentral.html  classvoraus_1_1PlugInDecentral.html  classvoraus_1_1PlugInDefinition.html  classvoraus_1_1Voraus.html  classvoraus_1_1VorausException.html  decentral__mod__man_8cpp.html  decentral__mod__man_8cpp_source.html  decentral__module__management_8cpp.html  decentral__module__management_8cpp_source.html  decentral__module__management_8hpp.html  decentral__module__management_8hpp_source.html  decentral__plug__in_8cpp.html  decentral__plug__in_8cpp_source.html  decentral__plug__in_8hpp.html  decentral__plug__in_8hpp_source.html  decentral__plug__in__controller_8cpp.html  decentral__plug__in__controller_8cpp_source.html  dir_09f0afd3a85c644a2b50dfd0f7a68a3a.html  (+54 more)
github.org/: params.json
include/module_management/: module_management_base.hpp
include/voraus/: demo.hpp  distributed_plug_in.cpp  distributed_plug_in.hpp  plug_in_base.hpp  plug_in_definition.hpp  voraus_base.hpp
launch/: demo_start_agent.launch  demo_start_master.launch  start_master.launch  start_robot.launch
msg/: cpu_demo_ready.msg  data_demo_ready.msg  heartbeat.msg
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_9.js  files_0.js  files_1.js  files_2.js  (+33 more)
src/: central_mod_man.cpp  central_plug_in_controller.cpp  decentral_mod_man.cpp  decentral_plug_in_controller.cpp  demo.cpp
src/module_management/: central_module_management.cpp  central_module_management.hpp  decentral_module_management.cpp  decentral_module_management.hpp
src/voraus/: central_plug_in.cpp  central_plug_in.hpp  decentral_plug_in.cpp  decentral_plug_in.hpp
srv/: module_registration.srv  robot_registration.srv
